--- a/templates/index.html
+++ b/templates/index.html
@@ -731,8 +731,8 @@
     
 <script>
 
-const LOGIN_URL =
-  'https://discord.com/oauth2/authorize?client_id=1406800818786668644&response_type=code&redirect_uri=https%3A%2F%2Fmacrostack.koyeb.app%2Fauth%2Fdiscord%2Fcallback&scope=identify';
+const LOGIN_URL = '/auth/discord';             // let Passport start the flow (sets session + state)
+loginBtn.onclick  = () => (location.href = LOGIN_URL);
   const LOGOUT_URL = '/logout';
 /* ---------- UI Helpers (mobile menu, smooth scroll) ---------- */
 document.getElementById('mobile-menu-button').addEventListener('click', () => {
